--- a/posts/2015-10-27 élasticité expansion-réaction diffusion.ipynb
+++ b/posts/2015-10-27 élasticité expansion-réaction diffusion.ipynb
@@ -46,8 +46,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[MoviePy] >>>> Building video /var/folders/3p/m0g52j9j69z3gj8ktpgg1dm00000gn/T/tmp7y3156zn.webm\n",
-      "[MoviePy] Writing video /var/folders/3p/m0g52j9j69z3gj8ktpgg1dm00000gn/T/tmp7y3156zn.webm\n"
+      "[MoviePy] >>>> Building video /var/folders/3p/m0g52j9j69z3gj8ktpgg1dm00000gn/T/tmp7y3156zn.mp4\n",
+      "[MoviePy] Writing video /var/folders/3p/m0g52j9j69z3gj8ktpgg1dm00000gn/T/tmp7y3156zn.mp4\n"
      ]
     },
     {
@@ -65,7 +65,7 @@
      "output_type": "stream",
      "text": [
       "[MoviePy] Done.\n",
-      "[MoviePy] >>>> Video ready: /var/folders/3p/m0g52j9j69z3gj8ktpgg1dm00000gn/T/tmp7y3156zn.webm \n",
+      "[MoviePy] >>>> Video ready: /var/folders/3p/m0g52j9j69z3gj8ktpgg1dm00000gn/T/tmp7y3156zn.mp4 \n",
       "\n"
      ]
     },
