--- a/posts/2015-11-26 élasticité - scénario vague.ipynb
+++ b/posts/2015-11-26 élasticité - scénario vague.ipynb
@@ -48,7 +48,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving sequence ../files/waves_low as a .webm format\n"
+      "Saving sequence ../files/waves_low as a .mp4 format\n"
      ]
     },
     {
@@ -58,7 +58,7 @@
        "                <center><table border=none width=100% height=100%>\n",
        "                <tr>\n",
        "                <td width=33%%><center><img src=\"../files/waves_low.png\" width=100%/></td>\n",
-       "                <td rowspan=2  colspan=2><center><video src=\"../files/waves_low.webm\"   loop=\"1\" autoplay=\"1\" controls   type=\"video/webm\" width=100%/></td>\n",
+       "                <td rowspan=2  colspan=2><center><video src=\"../files/waves_low.mp4\"   loop=\"1\" autoplay=\"1\" controls   type=\"video/webm\" width=100%/></td>\n",
        "                </tr>\n",
        "                <tr>\n",
        "                <td><center><img src=\"../files/waves_low_cube.png\" width=100%/></td>\n",
@@ -75,7 +75,7 @@
    ],
    "source": [
     "name = 'waves'\n",
-    "vext = '.webm'\n",
+    "vext = '.mp4'\n",
     "import os\n",
     "import numpy as np\n",
     "import MotionClouds as mc\n",
@@ -161,7 +161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving sequence ../files/waves_impulse as a .webm format\n"
+      "Saving sequence ../files/waves_impulse as a .mp4 format\n"
      ]
     },
     {
@@ -171,7 +171,7 @@
        "                <center><table border=none width=100% height=100%>\n",
        "                <tr>\n",
        "                <td width=33%%><center><img src=\"../files/waves_impulse.png\" width=100%/></td>\n",
-       "                <td rowspan=2  colspan=2><center><video src=\"../files/waves_impulse.webm\"   loop=\"1\" autoplay=\"1\" controls   type=\"video/webm\" width=100%/></td>\n",
+       "                <td rowspan=2  colspan=2><center><video src=\"../files/waves_impulse.mp4\"   loop=\"1\" autoplay=\"1\" controls   type=\"video/webm\" width=100%/></td>\n",
        "                </tr>\n",
        "                <tr>\n",
        "                <td><center><img src=\"../files/waves_impulse_cube.png\" width=100%/></td>\n",
