--- a/posts/2015-04-10_elastic-force.ipynb
+++ b/posts/2015-04-10_elastic-force.ipynb
@@ -36,7 +36,7 @@
       "text/html": [
        "\n",
        "            <center><table border=none width=100% height=100%>\n",
-       "            <tr> <td width=100%><center><video  loop=\"1\" autoplay=\"1\" controls  src=\"../galleries/elasticite/test_grid2.webm\" type=\"video/webm\"  width=100%>\n",
+       "            <tr> <td width=100%><center><video  loop=\"1\" autoplay=\"1\" controls  src=\"../galleries/elasticite/test_grid2.mp4\" type=\"video/webm\"  width=100%>\n",
        "            </td></tr></table></center>"
       ],
       "text/plain": [
@@ -72,10 +72,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[MoviePy] >>>> Building video ../galleries/elasticite/parallel_force.webm\n",
-      "[MoviePy] Writing video ../galleries/elasticite/parallel_force.webm\n",
+      "[MoviePy] >>>> Building video ../galleries/elasticite/parallel_force.mp4\n",
+      "[MoviePy] Writing video ../galleries/elasticite/parallel_force.mp4\n",
       "[MoviePy] Done.\n",
-      "[MoviePy] >>>> Video ready: ../galleries/elasticite/parallel_force.webm \n",
+      "[MoviePy] >>>> Video ready: ../galleries/elasticite/parallel_force.mp4 \n",
       "\n"
      ]
     },
@@ -84,7 +84,7 @@
       "text/html": [
        "\n",
        "            <center><table border=none width=100% height=100%>\n",
-       "            <tr> <td width=100%><center><video  loop=\"1\" autoplay=\"1\" controls  src=\"../galleries/elasticite/parallel_force.webm\" type=\"video/webm\"  width=100%>\n",
+       "            <tr> <td width=100%><center><video  loop=\"1\" autoplay=\"1\" controls  src=\"../galleries/elasticite/parallel_force.mp4\" type=\"video/webm\"  width=100%>\n",
        "            </td></tr></table></center>"
       ],
       "text/plain": [
@@ -128,7 +128,7 @@
       "text/html": [
        "\n",
        "            <center><table border=none width=100% height=100%>\n",
-       "            <tr> <td width=100%><center><video  loop=\"1\" autoplay=\"1\" controls  src=\"../galleries/elasticite/cocircular_force.webm\" type=\"video/webm\"  width=100%>\n",
+       "            <tr> <td width=100%><center><video  loop=\"1\" autoplay=\"1\" controls  src=\"../galleries/elasticite/cocircular_force.mp4\" type=\"video/webm\"  width=100%>\n",
        "            </td></tr></table></center>"
       ],
       "text/plain": [
@@ -173,7 +173,7 @@
       "text/html": [
        "\n",
        "            <center><table border=none width=100% height=100%>\n",
-       "            <tr> <td width=100%><center><video  loop=\"1\" autoplay=\"1\" controls  src=\"../galleries/elasticite/cocircular_antiparallel_force.webm\" type=\"video/webm\"  width=100%>\n",
+       "            <tr> <td width=100%><center><video  loop=\"1\" autoplay=\"1\" controls  src=\"../galleries/elasticite/cocircular_antiparallel_force.mp4\" type=\"video/webm\"  width=100%>\n",
        "            </td></tr></table></center>"
       ],
       "text/plain": [
@@ -227,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   },
   "toc": {
    "nav_menu": {},
@@ -241,5 +241,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
