--- a/posts/2015-11-29 élasticité - scénario onde.ipynb
+++ b/posts/2015-11-29 élasticité - scénario onde.ipynb
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving sequence ../files/onde as a .webm format\n"
+      "Saving sequence ../files/onde as a .mp4 format\n"
      ]
     },
     {
@@ -68,7 +68,7 @@
       "text/html": [
        "\n",
        "            <center><table border=none width=100% height=100%>\n",
-       "            <tr> <td width=100%><center><video  loop=\"1\" autoplay=\"1\" controls  src=\"../files/onde.webm\" type=\"video/webm\"  width=100%\\>\n",
+       "            <tr> <td width=100%><center><video  loop=\"1\" autoplay=\"1\" controls  src=\"../files/onde.mp4\" type=\"video/webm\"  width=100%\\>\n",
        "            </td></tr></table></center>"
       ],
       "text/plain": [
@@ -81,7 +81,7 @@
    ],
    "source": [
     "name = 'onde'\n",
-    "vext = '.webm'\n",
+    "vext = '.mp4'\n",
     "import os\n",
     "import numpy as np\n",
     "import MotionClouds as mc\n",
@@ -172,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving sequence ../files/onde_impulse as a .webm format\n"
+      "Saving sequence ../files/onde_impulse as a .mp4 format\n"
      ]
     },
     {
@@ -180,7 +180,7 @@
       "text/html": [
        "\n",
        "            <center><table border=none width=100% height=100%>\n",
-       "            <tr> <td width=100%><center><video  loop=\"1\" autoplay=\"1\" controls  src=\"../files/onde_impulse.webm\" type=\"video/webm\"  width=100%\\>\n",
+       "            <tr> <td width=100%><center><video  loop=\"1\" autoplay=\"1\" controls  src=\"../files/onde_impulse.mp4\" type=\"video/webm\"  width=100%\\>\n",
        "            </td></tr></table></center>"
       ],
       "text/plain": [
